--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
+        "livewire/livewire": "^3.6",
+        "omnia-digital/livewire-calendar": "^3.2",
         "spatie/laravel-permission": "^6.17"
     },
     "require-dev": {
