--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
+        "mews/captcha": "^3.4",
         "omnia-digital/livewire-calendar": "^3.2",
         "spatie/laravel-permission": "^6.17"
     },
