--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^6.3.5"
     },
     "dependencies": {
-        "alpinejs": "^3.14.9"
+        "alpinejs": "^3.14.9",
+        "fullcalendar": "^6.1.17"
     }
 }
